tests/stable/function/compile_fail/precondition_missing.stderr
error[E0063]: missing field `_custom_is_20baz` in initializer of `foo`
 --> $DIR/precondition_missing.rs:9:6
  |
9 |     #[assure("is bar", reason = "foo is bar")]
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `_custom_is_20baz`
